# dioxus-bug

./: Cargo.toml
src/: app.rs  main.rs
